--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Amit Jena"
-  avatar           : "profile.png"
+  avatar           : "profile.JPG"
   bio              : "PhD Student @TAMU"
   location         : "Location"
   employer         :
