--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/amitjena1992"
+  github           : "amitjena1992"
   github@TAMU      :  
   google_plus      :
   keybase          :
