--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,15 @@
 main:
   - title: "Publications"
     url: /publications/
+  
+  - title: "Research"
+    url: /research/
+
+  - title: "CV"
+    url: /cv/
+
+  - title: "Blog Posts"
+    url: /year-archive/
 
   - title: "Talks"
     url: /talks/    
@@ -11,12 +20,7 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
+          
     
   # - title: "Guide"
   #   url: /markdown/
