--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,14 +12,14 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Teaching"
+  #   url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
           
     
   # - title: "Guide"
